# Detection-de-la-maladie-de-Parkinson-par-donnees-multimodales

./: DATASET_MERGE_EXPLANATION.md  README.md  pyproject.toml  requirements.txt  voice_loader.py
analysis/: eda_spiral_uci.py  eda_voice.py
data/: data_voice.py
data/voice/: test_data_merged.txt  train_data_merged.txt
interface/: index.html  inference.html  results.html  script.js  style.css
model/: fusion_model.py
reports/: variables_importantes.md
reports/figures/: metrics_baseline.json  model_fusion.joblib  model_fusion.pkl
reports/figures/spiral_uci/: feature_importance_rf.csv  features_per_subject.csv  metrics_rf_holdout.json  qc_summary.json
reports/figures/voice/: features_per_subject_voice.csv
